--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>AdminLTE 3</title>
+        <title>Gosarthi</title>
         <base href="/" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5iQXg4Ftl8qA-7iLmHDdlH_2_r3CCyYk&libraries=places,geometry"></script>
-</head>
+    </head>
     <body class="mat-typography">
         <app-root class="sidebar-mini sidebar-open"></app-root>
     </body>
